--- a/.vscode/public/index.html
+++ b/.vscode/public/index.html
@@ -90,7 +90,7 @@
                                         <br/>
                                         <br/>
                                         <br/>
-                                        <button type="submit" id="submitbutton" onclick="saveRegisterForm()" class="btn btn-primary">Submit</button>
+                                        <button id="submitbutton" class="btn btn-primary">Submit</button>
                                     </form>
                                 </div>
                             </div>
@@ -256,35 +256,6 @@
             var code = e.keyCode || e.which;
             if (code == 27) $('#myModal').hide();
         });
-    </script>
-
-    <script>
-        // window.onload = function() {
-        //     initialArray();
-        // }
-
-        // function initialArray(){
-
-        // // var allUsers = [];
-        // // allUsers.push({ username: "p", password: "p" }); //default one.};
-        // // }
-
-        //     //were asked for a default user in the users' array:
-        //     var defultUser = { user_name: "p", password: "p"}
-        //     var allUsers = [defultUser];
-        // }
-
-        // function addUserToArray(userName, passWord){
-
-        //     if(isUserameExists(userName)) // username already exists in the system
-        //         return false;
-
-        //     //else - adds new user to the system.
-        //     var newPerson = { username: getElementById("username"), password: getElementById("password") };
-
-        //     allUsers.push(newPerson);
-        //     return true;
-        // }
     </script>
 
 </html>
