--- a/.vscode/public/index.html
+++ b/.vscode/public/index.html
@@ -246,6 +246,13 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="register.js"></script>
+
+        <!-- <img id="pacmanD" src="pacmanD.jpg"  width="100" height="100">
+        <img id="pacmanU" src="pacmanU.jpg"  width="100" height="100">
+        <img id="pacmanR" src="pacmanR.jpg"  width="100" height="100"> -->
+        <!-- <img id="pacmanL" src="pacmanL.jpg"  width="100" height="100"> -->
+
+
 </body>
 <script>
     // Get the modal
