--- a/.vscode/public/index.html
+++ b/.vscode/public/index.html
@@ -92,7 +92,7 @@
                     <!-- Modal content -->
                     <div class="modal-content">
                         <span class="close">&times;</span>
-                        <p>The creators of the game:Tair Cohen and Tali Shwarz
+                        <p>The creators of the game:Tair Cohen and Tali Schvartz
                             <br /> The jQuery Plugin that we have used are:
                             <br /> The Template that we have used are:
                             <br /> The difficulties we encountered in the exercise are:
@@ -149,7 +149,7 @@
                                 <th>
                                     <div id="life">
                                         <label for="lblLife">LIFE:</label>
-                                        <input id="lblLife" type="text" value="5" />
+                                        <input id="lblLife" type="text" />
                                     </div>
                                 </th>
                             </tr>
