wall is fixed, moving monsters is better - still need to check, need to fix that monsters wont come one on each other

--- a/.vscode/public/index.html
+++ b/.vscode/public/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div>
-        <img src="logo2.jpg" position="sticky" width=1300 height="100" width="20%" height="10%"></img>
+        <img src="logo2.png"></img>
         <div id="header">
             <div id="menu">
                 <ul>
@@ -106,6 +106,7 @@
                         <style>
                             table {
                                 text-align: center;
+                                margin: 0 auto;
                             }
                             
                             th,
