--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <form class="form" method="post" action="#">
                         <br />
                         <br />
-                        <ppp>Please log in to your account</ppp>
+                        <ppp>Please login into your account</ppp>
                         <br />
                         <br />
                         <br />
